--- a/paper.tex
+++ b/paper.tex
@@ -156,8 +156,8 @@ These scripting languages were used where Java would not suffice and only for ta
 * how to modularize that
 * what is reusable
 * what isnt reusable
-This was accomplished by designing a reuasble framework which embodies the commonality between strategy design exercises, allowing instructors creating new exercises to change only the necessary, assignment-specific details, and which will include more advanced automated grading tools than previously existed for the course.
-Within this framework, I have built a collection of utilities to facilitate students' evaluation of their own strategies and to decrease strategy iteration overhead.
+%This was accomplished by designing a reuasble framework which embodies the commonality between strategy design exercises, allowing instructors creating new exercises to change only the necessary, assignment-specific details, and which will include more advanced automated grading tools than previously existed for the course.
+%Within this framework, I have built a collection of utilities to facilitate students' evaluation of their own strategies and to decrease strategy iteration overhead.
 how to grade people not against peers
 
 * what extensions
@@ -165,15 +165,38 @@ how to grade people not against peers
 \section*{Results}
 As the goals of a project naturally define evaluation criteria, I have evaluated my project on the basis of those goals.
 
-Thus, quantitative metrics, including software failure rates and instructor time usage, and qualitiative metrics, including student and instructor satisfaction, both illustrate the improvements to the course and emphasize the importance of quality tooling to quality programming-based assignments.
+\begin{itemize}
+\item discover modularity and decrease assignment to assignment rewriting
+  \begin{itemize}
+  \item code rewriting measurements
+  \item instructor time usage
+  \end{itemize}
+\item improve student resources
+  \begin{itemize}
+  \item list resources created
+  \item polling data about student usage
+  \item empirical results about student error rates
+  \end{itemize}
+\item create institutional memory and decrease year-to-year rewriting
+  \begin{itemize}
+  \item cant measure until next year, but set up for it
+  \end{itemize}
+\item increase student and instructor satisfaction
+  \begin{itemize}
+  \item polling data about student usage
+  \end{itemize}
+\end{itemize}
+
+%Thus, quantitative metrics, including software failure rates and instructor time usage, and qualitiative metrics, including student and instructor satisfaction, both illustrate the improvements to the course and emphasize the importance of quality tooling to quality programming-based assignments.
 
 \section*{Conclusions}
 Through this work, I aim to improve the quality of computer science theory education, from the perspectives of both the students and faculty associated with COS 445.
 
 prisoner's dilemma + search auctions
 
-The goal of this project is to discover to what degree the development of new strategy design exercises can be simplified or automated, to improve the student resources available during the completion of these exercises, and to create institutional memory and decrease year-to-year repetition of the same work.
+%The goal of this project is to discover to what degree the development of new strategy design exercises can be simplified or automated, to improve the student resources available during the completion of these exercises, and to create institutional memory and decrease year-to-year repetition of the same work.
 
+%the "programming assignments" aren't really about your ability to code. They are about placing the theoretical results from the course in context. They create a scenario in which mastery of theoretical results from the course content is demonstrated by making and justifying real-world decisions.
 
 \section*{Future Work}
 
